# gitm

./: Cargo.toml  LICENSE  README.md  install.sh  llms.txt
.github/workflows/: release.yml
src/: ai.rs  cli.rs  config.rs  exec.rs  gitops.rs  main.rs  pr.rs  scan.rs  status.rs  update.rs
templates/: CLAUDE.md
tests/: integration.rs
