[package]
name = "gitm"
version = "0.1.6"
edition = "2021"
description = "AI-aware multi-repo workspace orchestrator"
license = "MIT"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
serde_json = "1"
rayon = "1"
anyhow = "1"
semver = "1"

[dev-dependencies]
tempfile = "3"
